--- a/static/style/site.css
+++ b/static/style/site.css
@@ -182,6 +182,11 @@ body ::-webkit-scrollbar-thumb:hover {
     opacity: 1;
 }
 
+.disabled-elem {
+    color: #ddd;
+    pointer-events: none;
+}
+
 .ddTmmItem {
     padding: 0.5em 1em;
     transition: background-color 200ms;
